# chat-bot

./: .env.example  .gitignore  AGENTS.md  AUDIT.md  DOLT_REMOTE.md  Dockerfile  Makefile  README.md  description.md  docker-compose.yml  go.mod  go.sum  makefile  manifest  package-lock.json  package.json
.beads/: config.yaml  interactions.jsonl  issues.jsonl  metadata.json
cmd/app/: main.go
configs/: config.local.yaml  config.prod.yaml
docs/: architecture.md  development-plan-from-brd.md  test-pyramid.md
docs/diagrams/: component.md  deployment.md  erd.md  sequence-business-lookup.md  sequence-fallback.md  sequence-operator-handoff.md  sequence-restore.md  sequence-user-message.md
internal/app/: run.go  shutdown.go
internal/contracts/: message.go
legacy/tools/llm-service/: README.md  pyproject.toml
legacy/tools/llm-service/app/api/routes/: decide.py
legacy/tools/llm-service/app/core/: config.py  logging.py
legacy/tools/llm-service/app/prompts/: decide_prompt.txt
legacy/tools/llm-service/app/schemas/: requests.py
legacy/tools/llm-service/app/services/: decide_service.py  domain_service.py  prompt_builder.py
legacy/tools/llm-service/app/services/llm/: base.py  ollama_client.py
legacy/tools/llm-service/configs/: development.yaml  production.yaml
legacy/tools/llm-service/tests/test_api/: test_public_errors.py
legacy/tools/llm-service/tests/test_services/: test_prompt_builder.py
migrations/: 20260216002310_init_tables.sql
scripts/: check-core.sh  mock-external-services.py  reset-dialog.sh  semantic-gate.sh  smoke-compose.sh
seeds/: demo-bookings.json  demo-operators.json  demo-payments.json  demo-users.json  demo-workspace-bookings.json  intents.json  knowledge-base.json  mock-external-services.json
services/nlp-service/: Dockerfile  README.md  pyproject.toml  requirements.txt
services/nlp-service/app/: config.py  main.py
services/nlp-service/app/api/: router.py  schemas.py
services/nlp-service/core/: __init__.py  embeddings.py  preprocessor.py
services/nlp-service/tests/: test_contract.py  test_embeddings.py
(+334 files in other folders)
