[project]
name = "nlp-service"
version = "1.0.0"
description = "Russian preprocessing and deterministic embedding service for chat-bot"
requires-python = ">=3.12"
dependencies = [
    "fastapi==0.135.1",
    "pydantic==2.12.5",
    "pydantic-settings==2.13.1",
    "pymorphy3==2.0.6",
    "pymorphy3-dicts-ru==2.4.417150.4580142",
    "uvicorn==0.42.0",
]

[project.optional-dependencies]
test = [
    "httpx==0.28.1",
    "pytest==9.0.2",
]
qwen = [
    "sentence-transformers>=2.7.0",
    "transformers>=4.51.0,<5",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
ignore = ["E501"]

[tool.setuptools.packages.find]
include = ["app*", "core*"]

[build-system]
requires = ["setuptools>=82.0.1"]
build-backend = "setuptools.build_meta"
