
[tool.poetry]
name = "llm-service"
version = "0.1.0"
description = "LLM microservice for dialogue classification"
authors = ["VladKovDev"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.115.0"
uvicorn = {extras = ["standard"], version = "^0.32.0"}
pydantic = "^2.9.0"
pydantic-settings = "^2.6.0"
ollama = "^0.4.0"
google-generativeai = "^0.8.0"
zhipuai = "^2.1.0"
gigachat = "^0.1.0"
pyyaml = "^6.0.2"
python-dotenv = "^1.0.1"
structlog = "^24.4.0"
requests = {extras = ["socks"], version = "^2.33.1"}

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.0"
pytest-asyncio = "^0.24.0"
httpx = "^0.27.0"
pytest-cov = "^6.0.0"
ruff = "^0.7.0"
mypy = "^1.12.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true